Fix layout on small screens

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -67,15 +67,21 @@ header {
     nav.row {
         padding-top: 73px;
         flex: 0 0 auto;
+        justify-content: space-between;
         i.fas {
             display: none;
+            font-size: 24px;
+            line-height: 41px;
+        }
+        div:first-child {
+            text-align: left;
         }
         .brand {
             color: $color-main;
             font-family: $font-brand;
             font-size: 26px;
             text-decoration: none;
-            line-height: 41px;        
+            line-height: 41px;  
         }
         .menu {
             text-align: right;
@@ -232,6 +238,44 @@ footer {
         }
         &::before {
             line-height: 40px;
+        }
+    }
+}
+
+/* Media */
+
+@media (max-width: 767px) {
+    section {
+        padding: 60px 0;
+    }
+    h1 {
+        font-size: 32px;
+    }
+    header {
+        h1 {
+            font-size: 48px;
+        }
+        h2 {
+            font-size: 32px;
+        }
+        nav.row {
+            .menu {
+                ul {
+                    display: none;
+                }
+            }
+            i.fas {
+                display: inline;
+                &:hover {
+                    color: $color-main;
+                }
+            }
+
+        }
+    }
+    .portfolio {
+        h2 {
+            margin-bottom: 30px;
         }
     }
 }
